# ft_printf

./: CMakeLists.txt  Makefile  char.c  ft_printf.c  ft_printf.h  hex.c  hex_2.c  int_dec.c  int_dec_2.c  libftprintf.c  libftprintf.h  sct_inic.c  string.c  unsigned.c  unsigned_2.c  x_X.c
libft/: ft_split.c  ft_strlcat.c  ft_strlen.c  ft_strtrim.c
